<resources>
    <string name="app_name">Le Champ à la Maison</string>
    <!--Key shared pref -->
    <string name="isLoggedin_key">isLoggedin</string>
    <string name="token_key">token</string>
    <string name="date_token_key">date_token</string>
    <string name="login_key">login</string>
    <string name="type_key">type</string>
    <string name="cart_key">cart</string>
    <string name="paypal_key">paypal</string>
    <string name="title_activity_home">Le Champ à la Maison</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Le Champ à la Maison</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_total">Total :</string>
    <string name="tv_total">0 €</string>
    <string name="btn_pladeorder">Passer commande</string>
    <string name="img_minusItem">Decrease quantity</string>
    <string name="img_plusItem">Increase quantity</string>
    <string name="img_removeItem">Remove item</string>
    <string name="tv_chooseDeliveryAddress">Choisissez une adresse de livraison</string>
    <string name="tv_personnalAddress">Utiliser mon adresse personnelle</string>
    <string name="tv_otherAddress">Utiliser l\'adresse suivante :</string>

</resources>
