<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ffffff"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tv_chooseDeliveryAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:text="@string/tv_chooseDeliveryAddress"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <RadioGroup
        android:id="@+id/rg_addressChoices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_chooseDeliveryAddress"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_personnalAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_personnalAddress"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rb_otherAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/tv_otherAddress" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/rg_addressChoices"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ti_lastname"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="Nom :" />

            <EditText
                android:id="@+id/et_lastnameDelivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp"
                android:focusableInTouchMode="true"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_firstname"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="Prénom :" />

            <EditText
                android:id="@+id/et_firstnameDelivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_sexeDelivery"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="Sexe :"
                android:layout_gravity="center"/>

            <RadioGroup
                android:id="@+id/rg_sexDelivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_maleSexeDelivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="H" />

                <RadioButton
                    android:id="@+id/rb_femaleSexeDelivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="F" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_addressDelivery"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="Adresse :"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/et_addressDelivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:ems="15"
                android:inputType="textPostalAddress"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cityDelivery"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="Ville :"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/et_cityDelivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cpDelivery"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="C.P :"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/et_cpDelivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:ems="5"
                android:inputType="number"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_continueOrder"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginBottom="46dp"
        android:text="Continuer avec PayPal"
        android:textColor="@android:color/white"
        android:theme="@style/Theme.MaterialButton">
    </Button>

</RelativeLayout>